...
//

import SwiftUI

struct ContentView: View {
	@State private var accumulator = 0.0
	@State private var display = ""
	@State private var memory = 0.0
	@State private var pendingOperation: Operator = .none
	@State private var displayChange = false
	
	func addDisplayText(_ digit: String) {
		if displayChange {
...
								display = ""
								pendingOperation = .none
							} else {
								display = ""
							}
						} label: {
							Text("M+")
						}
						.buttonStyle(CalcButtonStyle())
						
						Button {
							display = ""
						} label: {
...
